Commit em 2025-11-30 07-02 PM

--- a/lootify_wallets/rel/env.sh.eex
+++ b/lootify_wallets/rel/env.sh.eex
@@ -1,7 +1,5 @@
 #!/bin/sh
 
-export RELEASE_DISTRIBUTION=name
-export RELEASE_NODE=wallets@wallets.lootify.local
+export RELEASE_DISTRIBUTION=sname
+export RELEASE_NODE=wallets
 export RELEASE_COOKIE="${ERLANG_COOKIE:-lootify_secret_cookie}"
-export ERL_EPMD_ADDRESS=0.0.0.0
-export ERL_AFLAGS="-kernel inet_dist_listen_min 9000 inet_dist_listen_max 9010"
